Enable remote clusters for CCS.

--- a/clusters/stack-monitoring/templates/elasticsearch-monitored.yaml
+++ b/clusters/stack-monitoring/templates/elasticsearch-monitored.yaml
@@ -9,6 +9,10 @@ metadata:
     app.kubernetes.io/name: stack-monitoring
 spec:
   version: {{ $.Values.version }}
+  # Enable remote cluster server so the monitoring cluster can run CCS against this cluster.
+  # See: https://www.elastic.co/docs/deploy-manage/remote-clusters/eck-remote-clusters
+  remoteClusterServer:
+    enabled: true
   monitoring:
     metrics:
       elasticsearchRefs:
