--- a/apps/application-operator.yaml
+++ b/apps/application-operator.yaml
@@ -20,6 +20,8 @@ spec:
       valueFiles:
         - values.yaml
       # To enable enterprise trial license, add:
+      # By setting this to true you are expressing that you have accepted the Elastic EULA 
+      #which can be found at https://www.elastic.co/eula.
       # values: |
       #   trialLicense:
       #     enabled: true
