--- a/operator/eck-operator/values-trial.yaml
+++ b/operator/eck-operator/values-trial.yaml
@@ -1,4 +1,5 @@
 # Enable enterprise trial license (creates eck-trial-license Secret in elastic-system).
 # Use with: -f values.yaml -f values-trial.yaml
+# By setting this to true you are expressing that you have accepted the Elastic EULA which can be found at https://www.elastic.co/eula.
 trialLicense:
   enabled: true
