--- a/apps/application-operator.yaml
+++ b/apps/application-operator.yaml
@@ -19,6 +19,7 @@ spec:
       releaseName: elastic-operator
       valueFiles:
         - values.yaml
+        - values-rbac.yaml
       # To enable enterprise trial license, add:
       # By setting this to true you are expressing that you have accepted the Elastic EULA 
       #which can be found at https://www.elastic.co/eula.
