RBAC support for monitoring cluster deployment

--- a/apps/application-stack-monitoring.yaml
+++ b/apps/application-stack-monitoring.yaml
@@ -17,6 +17,9 @@ spec:
     targetRevision: main
     helm:
       releaseName: eck-stack-monitoring
+      valueFiles:
+        - values.yaml
+        - values-rbac.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: default
