Fix wrong value file ref for RBAC

--- a/apps/application-stack-monitoring.yaml
+++ b/apps/application-stack-monitoring.yaml
@@ -19,7 +19,7 @@ spec:
       releaseName: eck-stack-monitoring
       valueFiles:
         - values.yaml
-        - values-rbac.yaml
+        - values-enforce-rbac.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: default
