Use new serviceaccount only for Kibana

--- a/clusters/stack-monitoring/templates/kibana-monitoring.yaml
+++ b/clusters/stack-monitoring/templates/kibana-monitoring.yaml
@@ -11,3 +11,7 @@ spec:
   elasticsearchRef:
     name: {{ .Values.monitoringCluster.elasticsearchName }}
     namespace: {{ .Values.monitoringCluster.namespace }}
+  {{- if $.Values.enforceRBAC }}
+  # Required when operator runs with --enforce-rbac-on-refs (cross-namespace ref to monitoring ES).
+  serviceAccountName: {{ $.Values.crossNamespaceServiceAccountName }}
+  {{- end }}
