RBAC for Kibana

--- a/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
+++ b/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
@@ -1,14 +1,15 @@
 {{- if .Values.enforceRBAC }}
-{{- range .Values.monitoredClusters }}
-# ServiceAccount in monitored namespace; RoleBinding in monitoring namespace allows it to GET monitoring Elasticsearch.
+# ServiceAccount in monitoring namespace (for use by resources in elastic-monitoring if needed).
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ $.Values.crossNamespaceServiceAccountName }}
-  namespace: {{ .namespace }}
+  name: {{ .Values.monitoringCluster.serviceAccountName | default "eck-monitoring-sa" }}
+  namespace: {{ .Values.monitoringCluster.namespace }}
   labels:
     app.kubernetes.io/name: stack-monitoring
+{{- range .Values.monitoredClusters }}
+# RoleBinding in monitoring namespace: allows default ServiceAccount from monitored namespace to GET monitoring Elasticsearch.
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -23,7 +24,7 @@ roleRef:
   name: elasticsearch-association
 subjects:
   - kind: ServiceAccount
-    name: {{ $.Values.crossNamespaceServiceAccountName }}
-    namespace: {{ .namespace }}
+    name: {{ .Values.monitoringCluster.serviceAccountName | default "eck-monitoring-sa" }}
+    namespace: {{ .Values.monitoringCluster.namespace }}
 {{- end }}
 {{- end }}
