Set service account name via values.yaml

--- a/clusters/stack-monitoring/values-enforce-rbac.yaml
+++ b/clusters/stack-monitoring/values-enforce-rbac.yaml
@@ -3,3 +3,6 @@
 # Use with: -f values.yaml -f values-enforce-rbac.yaml
 # See: https://www.elastic.co/docs/deploy-manage/deploy/cloud-on-k8s/restrict-cross-namespace-resource-associations
 enforceRBAC: true
+
+monitoringCluster:
+  serviceAccountName: eck-monitoring-sa
