Next fix for RBAC

--- a/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
+++ b/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
@@ -1,15 +1,50 @@
 {{- if .Values.enforceRBAC }}
-# ServiceAccount in monitoring namespace (for use by resources in elastic-monitoring if needed).
+{{- if .Values.monitoringCluster }}
+{{- $saName := (.Values.monitoringCluster.serviceAccountName) | default "eck-monitoring-sa" }}
+# ---
+# Pattern from https://www.elastic.co/docs/deploy-manage/deploy/cloud-on-k8s/restrict-cross-namespace-resource-associations
+# associated-resource-ns = monitoring namespace (resource that has the ref); elasticsearch-ns = elastic1/elastic2 (where referenced ES lives).
+# ---
+# 1) ServiceAccount in associated-resource namespace (elastic-monitoring), used by monitoring ES when it references elastic1/elastic2 (remoteClusters).
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.monitoringCluster.serviceAccountName | default "eck-monitoring-sa" }}
+  name: {{ $saName }}
   namespace: {{ .Values.monitoringCluster.namespace }}
   labels:
     app.kubernetes.io/name: stack-monitoring
+---
+# 2) RoleBinding IN the Elasticsearch namespace (elastic1, elastic2): allows the ServiceAccount from associated-resource-ns (monitoring) to GET Elasticsearch in this namespace.
 {{- range .Values.monitoredClusters }}
-# RoleBinding in monitoring namespace: allows default ServiceAccount from monitored namespace to GET monitoring Elasticsearch.
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: allow-associated-resource-from-remote-namespace
+  namespace: {{ .namespace }}
+  labels:
+    app.kubernetes.io/name: stack-monitoring
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: elasticsearch-association
+subjects:
+  - kind: ServiceAccount
+    name: {{ $saName }}
+    namespace: {{ $.Values.monitoringCluster.namespace }}
+{{- end }}
+---
+# 3) Reverse direction: monitored ES (elastic1, elastic2) -> monitoring ES (stack monitoring). ServiceAccount in each monitored namespace; RoleBinding in Elasticsearch namespace (elastic-monitoring).
+{{- range .Values.monitoredClusters }}
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ $saName }}
+  namespace: {{ .namespace }}
+  labels:
+    app.kubernetes.io/name: stack-monitoring
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -24,7 +59,8 @@ roleRef:
   name: elasticsearch-association
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.monitoringCluster.serviceAccountName | default "eck-monitoring-sa" }}
-    namespace: {{ .Values.monitoringCluster.namespace }}
+    name: {{ $saName }}
+    namespace: {{ $.Values.monitoringCluster.namespace }}
+{{- end }}
 {{- end }}
 {{- end }}
