--- a/clusters/stack-monitoring/templates/kibana-monitoring.yaml
+++ b/clusters/stack-monitoring/templates/kibana-monitoring.yaml
@@ -13,5 +13,5 @@ spec:
     namespace: {{ .Values.monitoringCluster.namespace }}
   {{- if $.Values.enforceRBAC }}
   # Required when operator runs with --enforce-rbac-on-refs (cross-namespace ref to monitoring ES).
-  serviceAccountName: {{ $.Values.crossNamespaceServiceAccountName }}
+  serviceAccountName: {{ .Values.monitoringCluster.serviceAccountName }}
   {{- end }}
