Support refs with different service accounts

--- a/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
+++ b/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
@@ -1,28 +1,21 @@
 {{- if .Values.enforceRBAC }}
 {{- if .Values.monitoringCluster }}
-{{- $saName := (.Values.monitoringCluster.serviceAccountName) | default "eck-monitoring-sa" }}
-# ---
-# Pattern from https://www.elastic.co/docs/deploy-manage/deploy/cloud-on-k8s/restrict-cross-namespace-resource-associations
-# associated-resource-ns = monitoring namespace (resource that has the ref); elasticsearch-ns = elastic1/elastic2 (where referenced ES lives).
-# ---
-# 1) ServiceAccount in associated-resource namespace (elastic-monitoring), used by monitoring ES when it references elastic1/elastic2 (remoteClusters).
+# ServiceAccount in monitoring namespace (for use by resources in elastic-monitoring if needed).
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ $saName }}
+  name: {{ (.Values.monitoringCluster.serviceAccountName) | default "eck-monitoring-sa" }}
   namespace: {{ .Values.monitoringCluster.namespace }}
   labels:
     app.kubernetes.io/name: stack-monitoring
 ---
-# 2) RoleBinding IN the Elasticsearch namespace (elastic1, elastic2): allows the ServiceAccount from associated-resource-ns (monitoring) to GET Elasticsearch in this namespace.
-{{- range .Values.monitoredClusters }}
----
+# RoleBinding so the monitoring namespace ServiceAccount can GET Elasticsearch in this namespace.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: allow-associated-resource-from-remote-namespace
-  namespace: {{ .namespace }}
+  name: allow-monitoring-sa-elasticsearch-association
+  namespace: {{ .Values.monitoringCluster.namespace }}
   labels:
     app.kubernetes.io/name: stack-monitoring
 roleRef:
@@ -31,20 +24,23 @@ roleRef:
   name: elasticsearch-association
 subjects:
   - kind: ServiceAccount
-    name: {{ $saName }}
-    namespace: {{ $.Values.monitoringCluster.namespace }}
-{{- end }}
+    name: {{ (.Values.monitoringCluster.serviceAccountName) | default "eck-monitoring-sa" }}
+    namespace: {{ .Values.monitoringCluster.namespace }}
 ---
-# 3) Reverse direction: monitored ES (elastic1, elastic2) -> monitoring ES (stack monitoring). ServiceAccount in each monitored namespace; RoleBinding in Elasticsearch namespace (elastic-monitoring).
+{{- end }}
+{{- if .Values.monitoringCluster }}
 {{- range .Values.monitoredClusters }}
+# ServiceAccount in monitored namespace: same name as in monitoring cluster, used by ES pods for cross-namespace association.
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ $saName }}
+  name: {{ $.Values.monitoredClusters.serviceAccountName }}
   namespace: {{ .namespace }}
   labels:
     app.kubernetes.io/name: stack-monitoring
+---
+# RoleBinding in monitoring namespace: allows this ServiceAccount from monitored namespace to GET monitoring Elasticsearch.
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -59,8 +55,8 @@ roleRef:
   name: elasticsearch-association
 subjects:
   - kind: ServiceAccount
-    name: {{ $saName }}
-    namespace: {{ $.Values.monitoringCluster.namespace }}
+    name: {{ $.Values.monitoredClusters.serviceAccountName }}
+    namespace: {{ .namespace }}
 {{- end }}
 {{- end }}
 {{- end }}
