--- a/clusters/stack-monitoring/values-enforce-rbac.yaml
+++ b/clusters/stack-monitoring/values-enforce-rbac.yaml
@@ -6,3 +6,6 @@ enforceRBAC: true
 
 monitoringCluster:
   serviceAccountName: eck-monitoring-sa
+
+monitoredClusters:
+  serviceAccountName: eck-monitored-sa
