--- a/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
+++ b/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
@@ -56,7 +56,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ $.Values.monitoredClusters.serviceAccountName }}
-    namespace: {{ .namespace }}
+    namespace: {{ $.Values.monitoringCluster.namespace }}
 {{- end }}
 {{- end }}
 {{- end }}
