--- a/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
+++ b/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
@@ -36,7 +36,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ $.Values.monitoredClusters.serviceAccountName }}
-  namespace: {{ .namespace }}
+  namespace: {{ $.Values.monitoredClusters.namespace }}
   labels:
     app.kubernetes.io/name: stack-monitoring
 ---
