More concise structure of RBAC resources

--- a/clusters/stack-monitoring/templates/elasticsearch-monitored.yaml
+++ b/clusters/stack-monitoring/templates/elasticsearch-monitored.yaml
@@ -22,9 +22,8 @@ spec:
       elasticsearchRefs:
         - name: {{ $.Values.monitoringCluster.elasticsearchName }}
           namespace: {{ $.Values.monitoringCluster.namespace }}
-  {{- if $.Values.enforceRBAC }}
-  # Required when operator runs with --enforce-rbac-on-refs (cross-namespace ref to monitoring ES).
-  serviceAccountName: {{ $.Values.monitoredClusters.serviceAccountName }}
+  {{- if and $.Values.enforceRBAC $.Values.monitoringCluster }}
+  serviceAccountName: {{ ($.Values.monitoringCluster.monitoredServiceAccountName) | default "eck-monitored-sa" }}
   {{- end }}
   nodeSets:
     - name: default
