--- a/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
+++ b/clusters/stack-monitoring/templates/rbac-serviceaccount-rolebinding.yaml
@@ -1,21 +1,40 @@
 {{- if .Values.enforceRBAC }}
 {{- if .Values.monitoringCluster }}
-# ServiceAccount in monitoring namespace (for use by resources in elastic-monitoring if needed).
+{{- $monitoringSA := (.Values.monitoringCluster.serviceAccountName) | default "eck-monitoring-sa" }}
+{{- $monitoredSA := (.Values.monitoringCluster.monitoredServiceAccountName) | default "eck-monitored-sa" }}
+# ---
+# Two ServiceAccounts: one for the monitoring cluster, one for monitored clusters.
+# RoleBindings: monitoring SA can access each monitored cluster; each monitored SA can access the monitoring cluster.
+# ---
+# 1) ServiceAccount for the monitoring cluster (used by monitoring ES to access elastic1/elastic2 via remoteClusters).
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ (.Values.monitoringCluster.serviceAccountName) | default "eck-monitoring-sa" }}
+  name: {{ $monitoringSA }}
   namespace: {{ .Values.monitoringCluster.namespace }}
   labels:
     app.kubernetes.io/name: stack-monitoring
 ---
-# RoleBinding so the monitoring namespace ServiceAccount can GET Elasticsearch in this namespace.
+# 2) ServiceAccount for each monitored cluster (used by monitored ES to access the monitoring cluster for stack monitoring).
+{{- range .Values.monitoredClusters }}
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ $monitoredSA }}
+  namespace: {{ .namespace }}
+  labels:
+    app.kubernetes.io/name: stack-monitoring
+{{- end }}
+# 3) RoleBinding per monitored cluster: allow the MONITORING ServiceAccount to access Elasticsearch in that monitored namespace (elasticsearch-association).
+{{- range .Values.monitoredClusters }}
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: allow-monitoring-sa-elasticsearch-association
-  namespace: {{ .Values.monitoringCluster.namespace }}
+  name: allow-monitoring-cluster-from-remote-namespace
+  namespace: {{ .namespace }}
   labels:
     app.kubernetes.io/name: stack-monitoring
 roleRef:
@@ -24,23 +43,11 @@ roleRef:
   name: elasticsearch-association
 subjects:
   - kind: ServiceAccount
-    name: {{ (.Values.monitoringCluster.serviceAccountName) | default "eck-monitoring-sa" }}
-    namespace: {{ .Values.monitoringCluster.namespace }}
----
+    name: {{ $monitoringSA }}
+    namespace: {{ $.Values.monitoringCluster.namespace }}
 {{- end }}
-{{- if .Values.monitoringCluster }}
+# 4) RoleBinding per monitored cluster in the MONITORING namespace: allow that MONITORED ServiceAccount to access the monitoring Elasticsearch.
 {{- range .Values.monitoredClusters }}
-# ServiceAccount in monitored namespace: same name as in monitoring cluster, used by ES pods for cross-namespace association.
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: {{ $.Values.monitoredClusters.serviceAccountName }}
-  namespace: {{ $.Values.monitoredClusters.namespace }}
-  labels:
-    app.kubernetes.io/name: stack-monitoring
----
-# RoleBinding in monitoring namespace: allows this ServiceAccount from monitored namespace to GET monitoring Elasticsearch.
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -55,8 +62,8 @@ roleRef:
   name: elasticsearch-association
 subjects:
   - kind: ServiceAccount
-    name: {{ $.Values.monitoredClusters.serviceAccountName }}
-    namespace: {{ $.Values.monitoredClusters.namespace }}
+    name: {{ $monitoredSA }}
+    namespace: {{ .namespace }}
 {{- end }}
 {{- end }}
 {{- end }}
