--- a/clusters/stack-monitoring/values-enforce-rbac.yaml
+++ b/clusters/stack-monitoring/values-enforce-rbac.yaml
@@ -1,11 +1,9 @@
-# Enable RBAC resources for cross-namespace associations (elastic1/elastic2 -> monitoring).
+# Enable RBAC resources for cross-namespace associations (elastic1/elastic2 <-> monitoring).
 # Use when the ECK operator is started with --enforce-rbac-on-refs (e.g. operator values-rbac.yaml).
 # Use with: -f values.yaml -f values-enforce-rbac.yaml
+# Do not set monitoredClusters here (it must remain the list from values.yaml).
 # See: https://www.elastic.co/docs/deploy-manage/deploy/cloud-on-k8s/restrict-cross-namespace-resource-associations
 enforceRBAC: true
 
 monitoringCluster:
   serviceAccountName: eck-monitoring-sa
-
-monitoredClusters:
-  serviceAccountName: eck-monitored-sa
