--- a/operator/eck-operator/values-multi-tenancy.yaml
+++ b/operator/eck-operator/values-multi-tenancy.yaml
@@ -1,5 +1,5 @@
 eck-operator:
-  managedNamespaces: ["elastic1", "elastic2"]
+  managedNamespaces: ["elastic1", "elastic2", "elastic-monitoring"]
   createClusterScopedResources: true
   refs:
     enforceRBAC: true
@@ -9,6 +9,6 @@ eck-operator:
       matchExpressions:
         - key: "eck.k8s.elastic.co/tenant"
           operator: In
-          values: ["elastic1", "elastic2"]
+          values: ["elastic1", "elastic2", "elastic-monitoring"]
   softMultiTenancy:
     enabled: true
